--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "less-loader": "^7.0.1",
     "socket.io-client": "^2.3.0",
     "vue": "^2.5.16",
+    "vue-cookie": "^1.1.4",
     "vue-electron": "^1.0.6",
+    "vue-i18n": "^8.22.1",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.10",
